fixes in unit tests